# conways_game_of_life

./: .gitignore  CMakeLists.txt  README.md  conways_game_of_lifeConfig.cmake.in  conways_game_of_lifeConfigVersion.cmake.in
include/conways_game_of_life/: board.hpp  conways_game_of_life.hpp  parameters.hpp  util.hpp
src/: conways_game_of_life.cpp
